# Project64

./: README.md  platformio.ini
SquareLine/: SquareLine_Project.sll  SquareLine_Project.spj  SquareLine_Project_events.py  Themes.slt  ios-ui.sll  ios-ui.spj
SquareLine/assets/: ui_font_Font1.c  ui_font_Font1.fcfg  ui_font_Font2.fcfg  ui_font_Font24.fcfg
SquareLine/ui/: CMakeLists.txt  filelist.txt  ui.c  ui.h  ui_events.c
SquareLine/ui/fonts/: ui_font_Font2.c
SquareLine/ui/images/: ui_img_four_64_png.c  ui_img_nine_64_png.c  ui_img_pause_32_png.c  ui_img_seven_64_png.c  ui_img_six_64_png.c  ui_img_two_64_png.c
SquareLine/ui/screens/: ui_Screen1.c  ui_Screen2.c
lib/: lv_conf.h
lib/ui/: CMakeLists.txt  filelist.txt  tmp  ui.c  ui.h  ui_events.c  ui_events.h  ui_helpers.c  ui_helpers.h  ui_themes.c  ui_themes.h
lib/ui/components/: ui_comp_hook.c
lib/ui/fonts/: ui_font_Font24.c
lib/ui/images/: ui_img_eight_32_png.c  ui_img_eight_64_png.c  ui_img_five_64_png.c  ui_img_one_64_png.c  ui_img_three_64_png.c  ui_img_zero_64_png.c
lib/ui/screens/: ui_Screen1.c  ui_Screen2.c
src/: main.cpp
